kubernetes/apps/projects/portfolio/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  labels:
    app.kubernetes.io/name: portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: portfolio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portfolio
    spec:
      containers:
        - name: portfolio
          image: ghcr.io/lukasparke/parke.dev-portfolio:run-20 # {"$imagepolicy": "flux-system:parke-dev-portfolio"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          livenessProbe: &probe
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities: {drop: ["ALL"]}
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: portfolio
