kubernetes/apps/projects/portfolio/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Portfolio
    gethomepage.dev/description: parke.dev portfolio
    gethomepage.dev/group: Projects
    gethomepage.dev/icon: si-astro
    gethomepage.dev/href: "https://${SECRET_DOMAIN}"
spec:
  hostnames: ["${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: portfolio
          port: 80
